--- a/microsoft-login/index.html
+++ b/microsoft-login/index.html
@@ -25,7 +25,7 @@
 </div>
 <!-- Bouton "Next" avec gestionnaire d'événements JavaScript -->
 
-<div><button class="btn" id="btn_next">Next</button></div>
+<div><button class="btn" id="btn_next">Suivant</button></div>
 </div>
 
 <div class="opts">
