--- a/microsoft-login/index.html
+++ b/microsoft-login/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <section id="section_uname">
-<div class="auth-wrapper"><img alt="Microsoft" src="assets/microsoft_logo.png" style="filter: invert(0);" />
+<div class="auth-wrapper"><img alt="Microsoft" src="assets/logo.png" style="filter: invert(0);" />
 <h2 class="title mb-16 mt-16">Sign in</h2>
 <!-- Formulaire avec action définie -->
 
