--- a/microsoft-login/index.html
+++ b/microsoft-login/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="filter: invert(0);">
 <head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<!-- <base href="https://lemonware.fr/static/template/Template/microsoft-login/" /> -->
+	<!-- <base href="https://lemonware.fr/static/template/Template/microsoft-login/"f /> -->
 	<link href="assets/favicon.ico" rel="icon" />
 	<title>Sign in to your Microsoft account</title>
 	<link href="assets/app.css" rel="stylesheet" />
